[package]
name = "node-lockfile"
version = "0.1.0"
edition = "2021"
authors = ["Fedor Indutny <238531+indutny@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/indutny/locktimize"
keywords = ["package-lock", "optimize"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
petgraph = { version = "0.6", default-features = false, features = ["stable_graph"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1", features = ["derive"] }
serde_json = "1.0"
node-semver = "2.1"
regex = "1.7.1"
